[package]
name = "obsidian-canvas-export"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
color-eyre = "0.6.2"
pulldown-cmark = "0.9.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
